# TorchDire

./: .gitignore  LICENSE  QGFD_Diffusion_Transformer.py  QGFD_Sanity_Checks.py  README.md  pyproject.toml  qgfd_attention.py  sampling_utils.py  setup.py  universal_qgfd_replacer.py
.github/workflows/: publish.yml  pypi-publish.yml
Dire/Tools/: QGFD_Layer_Document.markdown  Theoritical_Proof.py  qgfd.py
Dire/Tools/DDP_Trainer/: DDPTrainer.py
Dire/models/Swin_Control_diff_seg/: Test.py
Distributed/: __init__.py
Distributed/DDP/: DDP_Trainer.py
TorchDire/utils/Sparse_Attention_Layer/: Transformer.py
layers/: BrainFindingsExtractor.py  qgfd.py  requirements.txt
models/Deterministic/: UNet.py
models/Swin_Control_diff_seg/: README.md  SwinControlDiffSeg.py
utils/DDP_Trainer/: DDPTrainer.py  README.md
