[project]
name = "torchdire"
version = "0.2.7"
description = "Library for simplified AI model building with YAML automation and feature-rich ML utilities."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

authors = [
    { name = "Boopathi Raj", email = "rajboopathiking@gmail.com" }
]

keywords = ["pytorch", "deep learning", "automation", "yaml", "ml", "ai"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "torch>=2.0.0,<2.3.0",
    "torchvision>=0.15.0",
    "timm",
    "PyYAML>=6.0",
    "tqdm",
    "numpy<2",
    "matplotlib",
    "seaborn",
    "pandas",
    "onnx",
    "onnxruntime",
    "onnxruntime-tools"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "mypy",
    "black"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
