[project]
name = "torchdire"
version = "0.2.8"
description = "Library for simplified AI model building with QGFD and YAML automation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

authors = [
    { name = "Boopathi Raj", email = "rajboopathiking@gmail.com" }
]

dependencies = [
    "torch>=2.0.0,<2.3.0",
    "torchvision>=0.15.0",
    "timm",
    "PyYAML>=6.0",
    "tqdm",
    "numpy<2",
    "matplotlib",
    "seaborn",
    "pandas",
    "onnx",
    "onnxruntime",
    "onnxruntime-tools"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "flake8", "mypy", "black"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "qgfd_attention",
    "universal_qgfd_replacer"
]

[tool.setuptools.packages.find]
include = ["Dire", "Distributed", "layers"]
