[project]
name = "torchdire"
version = "2.0"
description = "Library for simplified AI model building with QGFD and YAML-based automation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
    { name = "Boopathi Raj", email = "rajboopathiking@gmail.com" }
]

keywords = [
    "pytorch",
    "deep learning",
    "qgfd",
    "robustness",
    "automation",
    "yaml",
    "ml",
    "ai"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "torch>=2.0.0,<2.3.0",
    "torchvision>=0.15.0",
    "timm",
    "PyYAML>=6.0",
    "tqdm",
    "numpy<2",
    "matplotlib",
    "seaborn",
    "pandas",
    "onnx",
    "onnxruntime",
    "onnxruntime-tools"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "mypy",
    "black"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Top-level standalone modules
py-modules = [
    "qgfd_attention",
    "universal_qgfd_replacer",
    "QGFD_Sanity_Checks"  # make sure the file is QGFD_Sanity_Checks.py
]

[tool.setuptools.packages.find]
# Only include real packages (dirs with __init__.py)
# Dire/, Distributed/, layers/ all have __init__.py
include = [
    "Dire",
    "Distributed",
    "layers"
]
